--- a/nba_page/nba_predictions.css
+++ b/nba_page/nba_predictions.css
@@ -86,7 +86,9 @@ tr:hover {
 } 
 
 .view-selector {
-    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .view-selector label {
@@ -103,6 +105,7 @@ tr:hover {
     color: var(--text-color);
     font-family: inherit;
     font-size: 0.9rem;
+    height: fit-content;
 }
 
 .view-selector select:focus {
@@ -117,4 +120,29 @@ tr:hover {
 
 .logo a:hover {
     cursor: pointer;
+}
+
+.view-controls {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 15px 0;
+}
+
+.backtesting-button {
+    display: inline-flex;
+    align-items: center;
+    padding: 0.5rem;
+    background-color: var(--white);
+    color: var(--black);
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    outline: 2px solid var(--accent-color);
+    height: fit-content;
+    font-size: 0.9rem;
+}
+
+.backtesting-button:hover {
+    background-color: var(--accent-color);
 }
