update current project

--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ h2 {
 .education-date {
     color: #666;
     font-size: 0.9rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .education-details {
